--- a/WebRoot/module/css/contractManage/EditContract.css
+++ b/WebRoot/module/css/contractManage/EditContract.css
@@ -149,7 +149,30 @@ body{
 .employeeN ul li:hover{
 	background-color:#dcdcdc;
 }
-
+.testProjectName{
+	 width:568px;
+	 display:none;
+	 border:1px solid #ccc;
+	 border-top:none;
+	 border-radius:3px;
+}
+.testProjectName ul {
+	width:567px;
+	height:30px;
+	border:none;
+	margin:0;
+	margin-left:-40px;
+}
+.testProjectName ul li{
+	width:567px;
+	height:30px;
+	line-height: 30px;
+	list-style-type: none;
+	text-indent: 12px;
+}
+.testProjectName ul li:hover{
+	background-color:#dcdcdc;
+}
 .main .contractFile{
 	min-width:855px;
 	width:1000px;
