--- a/WebRoot/module/css/permissionAssign/permissionAssign.css
+++ b/WebRoot/module/css/permissionAssign/permissionAssign.css
@@ -1,1 +1,50 @@
 @CHARSET "UTF-8";
+.sortTree{
+ min-width: 1300px;
+}
+#treeRole {
+	width: 400px; position : relative;
+	float: left;
+	margin-left: 10px;
+	margin-top: 10px;
+	height: auto;
+	overflow: auto;
+	position: relative;
+}
+
+#treeModule {
+	width: 800px;
+	position: relative;
+	float: left;
+	margin-left: 70px;
+	margin-top: 10px;
+	height: auto;
+	overflow: auto;
+}
+
+.treeview .list-group-item {
+	cursor: pointer
+}
+
+.treeview span.indent {
+	margin-left: 10px;
+	margin-right: 10px
+}
+
+.treeview span.icon {
+	width: 12px;
+	margin-right: 5px
+}
+
+.treeview .node-disabled {
+	color: silver;
+	cursor: not-allowed
+}
+
+.node-treeview-checkable {
+	
+}
+
+.node-treeview-checkable:not (.node-disabled ):hover {
+	background-color: #F5F5F5;
+}
