--- a/WebRoot/module/css/index/index.css
+++ b/WebRoot/module/css/index/index.css
@@ -142,7 +142,8 @@ vertical-align: middle;
 	border: 1px solid #253347;
 }
 
-.list-group-item:hover {
+
+.tree .list-group li:hover {
 	background: #27354a;
 }
 
