--- a/WebRoot/module/css/changeACE.css
+++ b/WebRoot/module/css/changeACE.css
@@ -37,3 +37,9 @@
 .input-group-addon{
 	background-color : #fff;
 }
+.table thread{
+	background:#364760;
+}
+.table thread tr{
+	background:#364760;
+}
