--- a/WebRoot/module/css/login/login.css
+++ b/WebRoot/module/css/login/login.css
@@ -5,38 +5,39 @@ body{
 	margin-top:150px;
 }
 .content{
-	width:700px;
-	height:510px;
+	width: 900px;
+    height: 470px;
+    margin-left: 469px;
+    margin-top: 260px;
+    margin-right: 469px;
 	background-color:white;
-	margin:0px auto;
-	margin-top: 10%;
 }
 .left-part{
-	width:360px;
+	width:437px;
 /* 	border:2px solid black; */
 	padding-left:10px;
 	float:left;
 }
 .left-content{
-	width:350px;
+	width:410px;
 	height:500px;
 /* 	border:2px solid yellow; */
 	padding-top:30px;
 	padding-left:15px;
 }
 .title{
-	width:320px;
+	width:350px;
 	margin-top:20px;
 	margin-bottom:40px;
 }
 .logo1{
 	width:40px;
-	height:50px;
+	height:40px;
 	float:left;
 }
 .logo2{
-	width:260px;
-	height:50px;
+	width:300px;
+	height:40px;
 	padding-left:20px;
 }
 .user-information{
@@ -120,17 +121,36 @@ body{
 	box-shadow:0px 10px 40px #AFEEEE; 
 }
 .right-part{
-	width:300px;
-	height:400px;
+	width:410px;
+	height:500px;
 	float:left;
 }
 .line{
+	width:1px;
+	height:280px;
 	float:left;
-	margin-top:150px;;
+	margin-top:100px;
+	margin-right:15px;
 }
 .right-content{
-	width:290px;
-	height:320px;
+	width:322px;
+	height:265px;
 	margin-top:90px;
+	margin-left:40px;
 	float:left;
+}
+.btnimg img{
+    position: fixed;
+    width: 394px;
+    height: 75px;
+    right: 1017px;
+    left: 474px;
+    top: auto;
+    bottom: 251.375;
+}
+.btnimg button{
+    width: 355px;
+	border-radius:10px;
+	font-size:18px;
+	background-color: #364760;
 }
