edit equipment css

--- a/WebRoot/module/css/contractManage/EditContract.css
+++ b/WebRoot/module/css/contractManage/EditContract.css
@@ -2,117 +2,109 @@
 body{
 	margin:0px;
 	padding:0px;
-	background-color:#eee;
+	background-color:#fff;
 }
 .main{
-	min-width:755px;
-	width:1100px;
 	height:900px;
-	background:#fff;
-	margin:0 auto;
-	border-radius:7px;
-	-moz-border-radius:7px; /* 老的 Firefox */
-	box-shadow: 0px 0px 10px #333;
-	-moz-box-shadow: 0px 0px 10px #333; /* 老的 Firefox */
-}
-.main #showContract{
-    min-width:855px;
-	height:210px;
-	margin:20px 50px;
-	font-size:14px;
-}
-#showContract .top{
-	height:55px;
-	line-height:55px;
-	border-bottom:2px solid #999;
-}
-#showContract .top span{
+	font-size:16px;
 	font-family:"Times New Roman",Georgia,Serif;
-	font-size:24px;
-	width:200px;
+	margin:0 auto;
 }
-
-.contract-title{
-	float:right;
-	height:55px;
-	padding:11px 0;
+.showContract{
+	width:99%;
+	height:250px;
+	margin:20px 10px;
 }
-
-.contractCode{
-	float:right;
-	height:34px;
-	width:350px;
+.showContract .top{
+	height:40px;
+	line-height:40px;
+	margin-bottom:10px;
+	border:1px solid #ccc;
 }
-.contractCode label{
-	float:right;
-	height:34px;
-	line-height: 34px;
+.contract_title{
+	display:inline;
 }
-.contractCode input{
-	float:right;
-	width:188px;
+.contract_title img{
+	margin:0 10px;
 }
-
-#showContract .bottom{
-	float:right;
-	height:176px;
-	border-bottom:2px solid #999;
+.contract_code{
+	display:inline;
+	width:700px;
 }
-#showContract .bottom div{
+.contract_code #contractID{
+	display:none;
+}
+.contract_code .contractCode{
+	height:40px;
+	width:300px;
+}
+.control-label{
+	width: 22%;
+	line-height:34px;
+	min-wdith: 80px;
+}
+.form-control {
+	display: inline;
+	width: 70%;
+}
+.showContract .bottom{
+}
+.showContract .bottom div.col-xs-4,div.col-md-2{
 	height:32px;
 	line-height:32px;
-	margin:4px 0;
-	float:left;
+	margin:10px 0;
 }
-#showContract input{height:32px;}
-.contractName{width:33%;}
-.companyName{width:33%;}
-.address{width:34%;}
-.oppositeMen{width:33%;}
-.linkPhone{width:33%;}
-.signAddress{width:34%;}
-.employeeName{width:33%;}
-.Time{width:67%;}
-.signTime{width:33%;}
-.contractAmount{width:24%;}
-.isClassified{width:23%;}
-.classifiedLevel{width:20%;}
+.showContract .bottom div.col-xs-2a{
+	width:15%;
+}
+label.wide{
+	width: 52%;
+}
+.narrow{
+	display: inline;
+	width: 40%;
+}
+.timeLabelDiv {
+	float: left;
+	height: 34px;
+	width: 22.5%;
+}
 
-.contractName input{width:225px;}
-.signAddress input{width:225px;}
-.companyName input{width:225px;}
-.address input{width:225px;}
-.oppositeMen input{width:100px;}
-.linkPhone input{width:137px;}
-.Time div{width:220px;}
-.Time div.bsp{width:40px;text-align: center;}
-.Time div input{width:180px;}
-.employeeName input{width:100px;}
-.signTime div{width:220px;}
-.signTime input{width:160px;}
-.contractAmount input{width:100px;}
-.isClassified input{float:left;width:16px;height:20px;}
-.isClassified span{height:28px;width:24px;font-size:18px;float:left;display:inline-block;}
-.classifiedLevel select{width:88px;}
+.timeLabelDiv label {
+	min-width: 83.92px;
+}
+
+.timeChooseDiv {
+	width: 70%;
+}
+.isClassified-label{
+	width:52%;
+}
+.classifiedLevel-label{
+	width:46%;
+}
+.classifiedLevel-select{
+	width:50%;
+}
 
 .companyN{
+	margin-left:23%;
 	position:relative;
-	 width:236px;
-	 display:none;
-	 border:2px solid #ccc;
-	 border-top:none;
-	 border-radius:3px;
-	 z-index: 10;
+	width:70%;
+	display:none;
+	border:1px solid #ccc;
+	border-top:none;
+	border-radius:3px;
+	background-color:#fff;
+	z-index: 10;
 }
 .companyN ul {
-	width:235px;
 	height:30px;
 	border:none;
 	margin:0;
 	margin-left:-40px;
 }
 .companyN ul li{
-	width:235px;
 	height:30px;
 	line-height: 30px;
 	list-style-type: none;
@@ -124,22 +116,21 @@ body{
 }
 .employeeN{
 	position:relative;
-	 width:106px;
-	 display:none;
-	 border:2px solid #ccc;
-	 border-top:none;
-	 border-radius:3px;
-	 z-index: 10;
+	margin-left: 53%;
+	width:40%;
+	display:none;
+	border:1px solid #ccc;
+	border-top:none;
+	border-radius:3px;
+	z-index: 10;
 }
 .employeeN ul {
-	width:105px;
 	height:30px;
 	border:none;
 	margin:0;
-	margin-left:-40px;
+	margin-left: -40px;
 }
 .employeeN ul li{
-	width:105px;
 	height:30px;
 	line-height: 30px;
 	list-style-type: none;
@@ -149,22 +140,28 @@ body{
 .employeeN ul li:hover{
 	background-color:#dcdcdc;
 }
+#addContent{
+	z-index: 1;
+}
 .testProjectName{
-	 width:568px;
-	 display:none;
-	 border:1px solid #ccc;
-	 border-top:none;
-	 border-radius:3px;
+	position: absolute;
+    margin-left: 21.5%;
+    float: left;
+    width: 66.5%;
+    display: none;
+    border: 1px solid #ccc;
+    border-top: none;
+    border-radius: 3px;
+    background-color: #fff;
+    z-index: 10;
 }
 .testProjectName ul {
-	width:567px;
 	height:30px;
 	border:none;
 	margin:0;
 	margin-left:-40px;
 }
 .testProjectName ul li{
-	width:567px;
 	height:30px;
 	line-height: 30px;
 	list-style-type: none;
@@ -173,86 +170,118 @@ body{
 .testProjectName ul li:hover{
 	background-color:#dcdcdc;
 }
-.main .contractFile{
-	min-width:855px;
-	width:1000px;
-	height:300px;
-	margin:20px 50px;
-	padding-bottom:20px;
-}
-.main .contractFile .top{
-	height:50px;
-	width:1000px;
-	line-height:50px;
-	border-bottom:2px solid #999;
-}
-.contractFile .top span{
-	font-family:"Times New Roman",Georgia,Serif;
-	font-size:24px;
-	width:200px;
-}
-.contractFile .top  .btnAdd{
-	margin:6px;
-	width:160px;
-}
 
-.contractFile .top  .btnAdd button{
-	width:100px;
-	height:32px;
-	line-height:10px;
-	font-size:14px;
+.contractFile{
+	width:99%;
+	min-height:300px;
+	margin:20px 10px;
 }
-
-.contractFile .bottom{
-	margin:20px 0px;
-	height:230px;
-	width:1000px;
-	border:1px solid #ccc;
-}
-#show_contractFile{
-	width:1000px;
-}
-.main .contractFileItem{
-	min-width:755px;
-	width:1000px;
-	height:200px;
-	margin:20px 50px;
-}
-.main .contractFileItem .top{
+.contractFile .top{
 	height:40px;
 	line-height:40px;
-	border-bottom:2px solid #999;
+	margin-bottom:10px;
+	border:1px solid #ccc;
 }
-.contractFileItem .top span{
-	font-family:"Times New Roman",Georgia,Serif;
-	font-size:24px;
-	width:200px;
+.contractFile_title{
+	display:inline;
 }
+.contractFile_title img{
+	margin:0 10px;
+}
+.contractFile .top .btnAdd{
+	margin:5px;
+}
+.contractFile .top  .btnAdd button{
+	width:106px;
+	height:30px;
+	line-height:30px;
+	font-size:14px;
+	background-color:#198ac8;
+	color:#fff;
+	border: none;
+}
+.contractFile .bottom{
+	margin:20px 10px;
+	height:230px;
+	width:99%;
+	border:1px solid #ccc;
+}
+
+#show_contractFile{
+	width:99%;
+}
+
+.contractFileItem{
+	width:99%;
+	min-height:300px;
+	margin:20px 10px;
+}
+.contractFileItem .top{
+	height:40px;
+	line-height:40px;
+	margin-bottom:10px;
+	border:1px solid #ccc;
+}
+.contractFileItem_title{
+	display:inline;
+}
+.contractFileItem_title img{
+	margin:0 10px;
+}
+.contractFileItem .top .btnAdd{
+	margin:5px;
+}
+.contractFileItem .top  .btnAdd button{
+	width:106px;
+	height:30px;
+	line-height:20px;
+	font-size:14px;
+	background-color:#198ac8;
+	color:#fff;
+	border: none;
+}
+
 .contractFileItem .bottom{
-	margin:20px 0px;
-	height:200px;
-	width:1000px;
+	margin:20px 10px;
+	height:230px;
+	width:99%;
 	border:1px solid #ccc;
 }
 #show_contractFileItem{
-	width:1000px;
+	width:99%;
+	min-width:1042px;
 }
 .footer{
-	margin-top:40px;
     float:left;
-    width:1000px;
+    width:99%;
 }
 .footer button#btn-goback{
-	margin-right:100px;
+	margin-left:10px;
+	color:#364760;
+	background-color:#fff;
 }
 .footer button{
-	margin-right:20px;
 	float:right;
-	width:88px;
+	width:106px;
 	height:30px;
 	color:#eee;
-	background-color:#5695ff;
-	border:2px outset #89a6ff;
+	background-color:#364760;
+	border:2px solid #475879;
 }
+#show_contractFile thead,.modal-header {
+	background-color: #364760;
+	color: #fff;
+	font-size: blod 14px;
+}
+#show_contractFileItem thead,.modal-header {
+	background-color: #364760;
+	color: #fff;
+	font-size: blod 14px;
+}
+
+.bs-checkbox {
+	vertical-align: middle !important;
+}
+
 .fl{float:left;}
 .fr{float:right;}
