--- a/WebRoot/Portal/css/aboutUs/Introduction.css
+++ b/WebRoot/Portal/css/aboutUs/Introduction.css
@@ -100,26 +100,31 @@
 .t_left_title{
 	width: 100%;
 	height: 35px;
-	    padding-left: 16px;
-	    margin-bottom: 15px;
+	padding-left: 16px;
+    margin-bottom: 5px;
 }
 .t_left_title{
 	background-image: url("../../images/notice-h1.png");
 	height: 32px;
 	font-size: 16px;
 }
+.t_left_title label{
+	font-weight:normal;
+}
 .left_content{
 	width: 85%;
-	height: 20px;
+	height: 32px;
+	line-height:32px;
     padding-bottom: 26px;
-    margin-top: 17px;
+    /*margin-top: 17px;*/
 	border-bottom:1px solid #efe5e5;
 	margin-left: 16px;
 }
 .left_content a{
-	 display: inline;
+	display: inline;
     margin-left: 7px;
     text-decoration:none;
+    color:#888888;
 }
 .left_content{
 	font-size: 14px;
