--- a/WebRoot/module/css/login/login.css
+++ b/WebRoot/module/css/login/login.css
@@ -2,41 +2,41 @@ body{
 	background-image:url('../../../module/img/login/total_bg.png');
 	background-repeat:no-repeat;
 	background-size:cover;
-	margin-top:150px;
+
 }
 .content{
-	width: 900px;
-    height: 470px;
-    margin-left: 469px;
-    margin-top: 260px;
-    margin-right: 469px;
-	background-color:white;
+	width: 50%;
+  	height: 450px;
+    margin: auto;
+ 	background-color: white;
+ 	min-width:630px;
+ 	margin-top: 10%;
 }
 .left-part{
-	width:437px;
+	width: 50%;
 /* 	border:2px solid black; */
 	padding-left:10px;
 	float:left;
 }
 .left-content{
-	width:410px;
+	width:100%;
 	height:500px;
 /* 	border:2px solid yellow; */
 	padding-top:30px;
 	padding-left:15px;
 }
 .title{
-	width:350px;
+	width:85%;
 	margin-top:20px;
 	margin-bottom:40px;
 }
 .logo1{
-	width:40px;
+	width:10%;
 	height:40px;
 	float:left;
 }
 .logo2{
-	width:300px;
+	width:90%;
 	height:40px;
 	padding-left:20px;
 }
@@ -76,21 +76,25 @@ body{
 	background-color:#FFF;
 }
 .code{
-	width:325px;
+	 width: 85%;
 	height:50px;
 	margin-top:20px;
 }
-.code-information{
-	width:205px;
-	height:50px;
-	float:left;
-	border:2px solid #DCDCDC;
+.code-info{
+	float: left;
+  	width: 159px;
 }
 #encode{
+	padding-left:35px;
+	padding-right:13px;
+	border-radius:10px;
+	  width: 95%;
 }
 .codePicture{
-	width:100px;
-	float:right;
+	width: 34%;
+  min-width: 74px;
+  min-height: 34px;
+    float: right;
 }
 .isAuto{
 	width:20px;
@@ -121,7 +125,7 @@ body{
 	box-shadow:0px 10px 40px #AFEEEE; 
 }
 .right-part{
-	width:410px;
+	width: 50%;
 	height:500px;
 	float:left;
 }
@@ -133,24 +137,16 @@ body{
 	margin-right:15px;
 }
 .right-content{
-	width:322px;
+	width: 66%;
 	height:265px;
 	margin-top:90px;
 	margin-left:40px;
 	float:left;
 }
-.btnimg img{
-    position: fixed;
-    width: 382px;
-    height: 51px;
-    right: 0px;
-    left: 483px;
-    top: auto;
-    bottom: 251.375;
-}
 .btnimg button{
-    width: 355px;
+    width: 87%;
 	border-radius:10px;
 	font-size:18px;
 	background-color: #364760;
+	box-shadow: 3px 5px 5px #A89C9C;
 }
