--- a/WebRoot/module/css/permissionAssign/permissionAssign.css
+++ b/WebRoot/module/css/permissionAssign/permissionAssign.css
@@ -1,9 +1,10 @@
 @CHARSET "UTF-8";
 .sortTree{
- min-width: 1300px;
+ min-width: 900px;
 }
 #treeRole {
-	width: 400px; position : relative;
+	width: 30%;
+	position : relative;
 	float: left;
 	margin-left: 10px;
 	margin-top: 10px;
@@ -13,7 +14,7 @@
 }
 
 #treeModule {
-	width: 800px;
+	width: 43%;
 	position: relative;
 	float: left;
 	margin-left: 70px;
