--- a/WebRoot/module/css/receiptlistManage/receiptlistManage.css
+++ b/WebRoot/module/css/receiptlistManage/receiptlistManage.css
@@ -13,16 +13,50 @@
 	display: inline-block;
 	width: 90px;
 }
+.input-group-area {
+	margin-bottom: 30px;
+	width:100%;
+	height: 50px;
+/* 	background: #1b89c4; */
+	background:#9abdd0;
+	opacity: 0.69;
+}
 
+.input-group-area  .btn-primary {
+    margin-top:8px;
+	margin-left: 26px;
+  /*   background: #198ac8; */
+    background: #089beb;
+    color: #fff;
+    opacity: 1;
+    font-size:14px;
+    z-index: 2222;
+}
+.glyphicon:before {
+ 
+    position: relative;
+    top: 1px;
+    right: -7px;
+}
+.input-group-area  .btn-primary:HOVER {
+
+  /*   background: #198ac8; */
+    background: #ffad33;
+
+}
+#searcherArea .row{
+	margin-left:0px;
+	margin-right:0px;
+}
 .fixed-table-container .bs-checkbox {
     text-align: center;
     vertical-align: middle;
 }
 #searcherArea{
- min-width: 1300px;
+ /* min-width: 1300px; */
 }
 .bootstrap-table{
- min-width: 1500px;
+ /* min-width: 1500px; */
 }
 .list-searcher select {
 	display: inline-block;
@@ -41,21 +75,25 @@
 .row{
     margin-bottom: 10px;
     }
-  .row label {
-	width: 20%;
-	min-width: 80px;
+.row label {
+	width: 30%;
+	/* min-width: 80px; */
 }  
-.timeLabelDiv{
+.control-label{
+	margin-top:6px;
+}
+/* .timeLabelDiv{
   float:left;
   height: 34px;
   min-width: 80px;
-}
+} */
 .timeLabelDiv label{
   margin-top: 7px;
 }
 .timeChooseDiv{
  width: 70%;
  margin-top: 0px;
+ float:right;
 }
 .input-group-addon{
   background-color: #fff;
