--- a/WebRoot/module/css/contractManage/EditContract.css
+++ b/WebRoot/module/css/contractManage/EditContract.css
@@ -55,14 +55,17 @@ body{
 	margin:10px 0;
 }
 .showContract .bottom div.col-xs-2a{
-	width:15%;
+	width:16%;
+}
+.showContract .bottom div.col-xs-1a{
+	width:15.3%;
 }
 label.wide{
-	width: 52%;
+	width: 55%;
 }
 .narrow{
 	display: inline;
-	width: 40%;
+	width: 37%;
 }
 .timeLabelDiv {
 	float: left;
@@ -78,13 +81,13 @@ label.wide{
 	width: 70%;
 }
 .isClassified-label{
-	width:52%;
+	width:54%;
 }
 .classifiedLevel-label{
-	width:46%;
+	width:34%;
 }
 .classifiedLevel-select{
-	width:50%;
+	width:63%;
 }
 
 .companyN{
@@ -202,7 +205,7 @@ label.wide{
 }
 .contractFile .bottom{
 	margin:20px 10px;
-	height:230px;
+	height:256px;
 	width:99%;
 	border:1px solid #ccc;
 }
