--- a/WebRoot/module/css/contractManage/contractManage.css
+++ b/WebRoot/module/css/contractManage/contractManage.css
@@ -128,7 +128,7 @@
 	vertical-align: middle !important;
 }
 .modal-body{
-	height:390px;
+	height:460px;
 }
 .modal-footer{
 	padding-right: 43px;
@@ -136,6 +136,10 @@
 label {
 	font-size: 16px;
 	color: #333;
+}
+#r1,#r2{
+	margin-left: 123px;
+	
 }
 .companyN{
 	margin-left:20.52%;
@@ -166,15 +170,18 @@ label {
 }
 
 .employeeName {
-	width: 568px;
+	margin-left:33.8%;
+	position:absolute;
+	width:60.6%;
 	display: none;
 	border: 1px solid #ccc;
 	border-top: none;
 	border-radius: 3px;
+	background-color:#fff;
+	z-index: 10;
 }
 
 .employeeName ul {
-	width: 567px;
 	height: 30px;
 	border: none;
 	margin: 0;
@@ -182,7 +189,6 @@ label {
 }
 
 .employeeName ul li {
-	width: 567px;
 	height: 30px;
 	line-height: 30px;
 	list-style-type: none;
