门户网站更改

--- a/WebRoot/Portal/css/onlineQuery/processDetail.css
+++ b/WebRoot/Portal/css/onlineQuery/processDetail.css
@@ -280,7 +280,8 @@ ul li{
 }
 .tabledata{
 	display:inline-block;
-	margin-left:20px;
+	float:right;
+	margin-right:20px;
 	overflow:hidden;
 }
 .specialtitle{
