--- a/WebRoot/Portal/css/newsPage/newsPage.css
+++ b/WebRoot/Portal/css/newsPage/newsPage.css
@@ -159,11 +159,11 @@ ul li{
     line-height: 2.1;
 }
 .firstNewsContent{
-	height:100px;
+	height:90px;
 	overflow:hidden;
 } 
 .firstNewsContent p{
-	height:90%;
+	height:100%;
 	width:100%;
 	overflow:hidden;
 	text-overflow:ellipsis; 
@@ -172,6 +172,8 @@ ul li{
 	text-indent:32px;;
 }
 .firstNewsButton{
+	margin-top:10px;
+	margin-left:85%;
 	height:50px;
 	
 }
