--- a/WebRoot/module/css/article/articleManage.css
+++ b/WebRoot/module/css/article/articleManage.css
@@ -15,3 +15,22 @@
 	background:-webkit-gradient(linear, 0% 0%, 0% 100%, from(#F2F2F2), to(#fff));
 }
 .edui-popup-content.edui-default{     height: auto !important;    }
+
+.group
+{
+	height:32px;
+}
+
+.articleColumn
+{
+	padding: 0px;
+	height:100%;
+	background:#fff;
+	border:none;
+	width:90px;
+	color:#333;
+	line-height:32px;
+	text-align:right;
+	padding-right:10px;
+}
+
