--- a/WebRoot/module/css/article/articleManage.css
+++ b/WebRoot/module/css/article/articleManage.css
@@ -21,7 +21,7 @@
 	height:32px;
 }
 
-.articleColumn
+.input-group-addon
 {
 	padding: 0px;
 	height:100%;
@@ -32,5 +32,13 @@
 	line-height:32px;
 	text-align:right;
 	padding-right:10px;
+	font-size:16px;
 }
 
+.th-inner {
+	height:100%;
+    background-color: #364760;
+    color: #fff;
+    font-size: 14px;
+    font-weight: bold;
+}
