--- a/WebRoot/module/css/contractManage/EditContract.css
+++ b/WebRoot/module/css/contractManage/EditContract.css
@@ -192,7 +192,7 @@ label.wide{
 	margin:0 10px;
 }
 .contractFile .top .btnAdd{
-	margin:5px;
+	margin:0 5px;
 }
 .contractFile .top  .btnAdd button{
 	width:106px;
