--- a/WebRoot/module/css/article/articleManage.css
+++ b/WebRoot/module/css/article/articleManage.css
@@ -5,9 +5,9 @@
 	text-align:left;
 /* 	background-color:rgb(252,231,231); */
 }
-.mainTableDate .form-group .btn{
+/*.mainTableDate .form-group .btn{
 	margin:30px 20px 0px;
-}
+}*/
 .mainTableDate .table thead{
 	background:-moz-linear-gradient(top,#F2F2F2,#fff);
 	filter:progid:DXImageTransform.Microsoft.Gradient(startColorStr='#F2F2F2',endColorStr='#fff',gradientType='0');
@@ -23,16 +23,16 @@
 
 .input-group-addon
 {
-	padding: 0px;
-	height:100%;
-	background:#fff;
-	border:none;
-	width:90px;
-	color:#333;
-	line-height:32px;
-	text-align:right;
-	padding-right:10px;
-	font-size:16px;
+    papadd: 0 10px;
+    padding: 0 10px;
+    background: #fff;
+    border: none;
+    line-height: 32px;
+    text-align: right;
+    font-size: 16px;
+    color: #333;
+    width:100px;
+	font-weight:bold;
 }
 
 .th-inner {
@@ -43,4 +43,49 @@
     color: #fff;
     font-size: 14px;
     font-weight: bold;
+}
+
+.btn{
+	width:106px;
+	height:40px;
+	padding:0px;
+	margin: 0px;
+	color:#fff;
+}
+
+.modal-header{
+    padding: 0;
+    height: 42px;
+    background: #364760;
+}
+
+.modal-title{
+    padding-left: 10px;
+    height: 42px;
+    background: #364760;
+    font-size: 16px;
+    line-height: 42px;
+    color: #fff
+}
+.modal-header button span{
+    font-size: 32px;
+    line-height: 42px;
+    padding-right: 10px;
+    color: #fff;
+    font-weight: 100;
+}
+
+.sure{
+	margin-right:20px;
+    background:#364760;
+}
+
+.newButton{
+	margin-right:20px;
+	width: 106px;
+    height: 40px;
+    background: #fff;
+    font-size: 14px;
+    color: #333;
+    border:1px #364760 solid;
 }
