--- a/WebRoot/module/css/registerManage/registerManage.css
+++ b/WebRoot/module/css/registerManage/registerManage.css
@@ -1,1 +1,35 @@
 @CHARSET "UTF-8";
+
+.modal-header{
+    padding: 0;
+    height: 42px;
+    background: #364760;
+}
+
+.modal-title{
+    padding-left: 10px;
+    height: 42px;
+    background: #364760;
+    font-size: 16px;
+    line-height: 42px;
+    color: #fff
+}
+.modal-header button span{
+    font-size: 32px;
+    line-height: 42px;
+    padding-right: 10px;
+    color: #fff;
+    font-weight: 100;
+}
+.newButton{
+	width: 80px;
+    height: 40px;
+    background: #fff;
+    font-size: 14px;
+    color: #333;
+    border:1px #364760 solid;
+}
+
+.sure{
+    background:#364760;
+}
