--- a/WebRoot/module/css/receiptlistManage/receiptlistManage.css
+++ b/WebRoot/module/css/receiptlistManage/receiptlistManage.css
@@ -101,3 +101,16 @@
  .table tr td img{
     margin-right: 4px; 
 }
+.modal-dialog p{
+	font-size: 16px;
+    color: #000;
+    font-weight: bold;
+    margin: 0px;
+    padding: 0px;
+}
+.modal-dialog .col-xs-12 input  ,.modal-dialog .col-md-12 input{
+	height: 25px;
+}
+.modal-footer button{
+	font-size: 16px;
+}
