--- a/WebRoot/module/css/contractManage/contractAudit.css
+++ b/WebRoot/module/css/contractManage/contractAudit.css
@@ -1,119 +1,91 @@
 @CHARSET "UTF-8";
+.list-searcher {
+	min-width: 300px;
+	height: 40px;
+}
+.list-searcher input {
+	display: inline-block;
+	margin-right: 20px;
+	width: 200px;
+}
 
-.bootstrap-table {
-    min-width: 1500px;
+.list-searcher span {
+	display: inline-block;
+	width: 90px;
+}
+.input-group-area {
+	margin-bottom: 30px;
+	width:100%;
+	height: 50px;
+	background:#9abdd0;
+	opacity: 0.69;
+}
+
+.input-group-area  .btn-primary {
+    margin-top:8px;
+	margin-left: 26px;
+    background: #089beb;
+    color: #fff;
+    opacity: 1;
+    font-size:14px;
+    z-index: 2222;
+}
+.glyphicon:before {
+    position: relative;
+    top: 1px;
+}
+.input-group-area  .btn-primary:HOVER {
+    background: #ffad33;
+
+}
+#searcherArea .row{
+	margin-left:0px;
+	margin-right:0px;
+}
+.fixed-table-container .bs-checkbox {
+    text-align: center;
+    vertical-align: middle;
+}
+.list-searcher select {
+	display: inline-block;
+    width: 200px;
+}
+.input-group{
+ margin-top: 10px;
+}
+.input-group .btn{
+ margin-left: 3px;
 }
 .form-control {
 	display: inline;
 	width: 70%;
 }
-
-.narrow{
-	display: inline;
-	width: 35%;
-}
-.content {
-	width: 100%;
-	min-width: 1300px;
-}
-
-.searchArea {
-	width: 98%;
-	margin-top: 10px;
-	margin-bottom: 10px
-	
-}
-
-.row {
-	margin-bottom: 10px;
-}
-
+.row{
+    margin-bottom: 10px;
+    }
 .row label {
-	width: 26%;
-	min-wdith: 80px;
+	width: 28%;
 }
-.row label.wide{
-	width: 60%;
+.control-label{
+	margin-top:6px;
 }
-.row1 {
-	margin-bottom: 10px;
-}
-.row1 .form-control{
-	display: inline;
-	width: 80%;
-}
-.row1 label {
-	width:16%;
-	padding-left: 10px;
-}
-
-.timeLabelDiv {
-	float:left;
-	height: 32px;
-	line-height:32px;
-	width: 26%;
-}
-
 .timeLabelDiv label{
-	min-width: 74.95px;
+  margin-top: 7px;
 }
-
-.timeLabelDiv1 {
-	float:left;
-	height: 34px;
-	line-height:34px;
-	width: 21%;
+.timeChooseDiv{
+  width: 70%;
+  margin-top: 0px;
+  float:right;
 }
-.timeLabelDiv1 label.control-label{
-	width: 100%;
-}
-.timeChooseDiv {
-	width: 70%;
-}
-.timeChooseDiv1 {
-	width: 78%;
-}
-.timeChooseDiv1 .form-control{
-	width: 100%;
-}
-.input-group-addon {
-	background-color: #fff;
-}
-
-#selectPart {
-	width: 70%;
-	text-align: center;
-}
-
-.buttonGroup {
-	background-color: rgb(232, 243, 249);
-	width: 100%;
-	margin: 20px 0 20px 0;
-	padding: 20px 0 20px 0;
-}
-
-.buttonGroup button:hover {
-	border: none;
-	color: #fff;
-	background-color: rgb(255, 173, 51);
-}
-
-#table thead,.modal-header {
-	background-color: #364760;
-	color: #fff;
-	font-size: 14px;
-}
-
-.bs-checkbox {
-	vertical-align: middle !important;
+.input-group-addon{
+  background-color: #fff;
+ } 
+ .table tr td img{
+    margin-right: 4px; 
 }
 .modal-body{
 	height:65px;
 }
 .modal-footer{
 	padding-right: 43px;
-}
-label {
-	font-size: 16px;
-	color: #333;
 }
