--- a/WebRoot/module/css/index/index.css
+++ b/WebRoot/module/css/index/index.css
@@ -1,3 +1,4 @@
+
 @CHARSET "UTF-8";
 .contairw {
 	min-width: 1300px;
@@ -159,6 +160,7 @@ vertical-align: middle;
 	background: #37475f;
 	color: #fff;
 	border: 1px solid #253347;
+	padding-left: 0;
 }
 
 .list-group-item a {
