--- a/WebRoot/module/css/contractManage/EditContract.css
+++ b/WebRoot/module/css/contractManage/EditContract.css
@@ -89,7 +89,6 @@ label.wide{
 .classifiedLevel-select{
 	width:63%;
 }
-
 .companyN{
 	margin-left:23%;
 	position:relative;
@@ -114,13 +113,16 @@ label.wide{
 	text-indent: 12px;
 	background-color:#fff;
 }
+.companyN ul li.noDate{
+ 	color: red;
+}
 .companyN ul li:hover{
 	background-color:#dcdcdc;
 }
 .employeeN{
 	position:relative;
-	margin-left: 53%;
-	width:40%;
+	margin-left: 56%;
+	width:37.3%;
 	display:none;
 	border:1px solid #ccc;
 	border-top:none;
@@ -139,6 +141,10 @@ label.wide{
 	list-style-type: none;
 	text-indent: 12px;
 	background-color:#fff;
+}
+.employeeN ul li.noDate{
+ 	color: red;
+ 	font-size:14px;
 }
 .employeeN ul li:hover{
 	background-color:#dcdcdc;
@@ -169,6 +175,9 @@ label.wide{
 	line-height: 30px;
 	list-style-type: none;
 	text-indent: 12px;
+}
+.testProjectName ul li.noDate{
+ 	color: red;
 }
 .testProjectName ul li:hover{
 	background-color:#dcdcdc;
@@ -258,7 +267,7 @@ label.wide{
     float:left;
     width:99%;
 }
-.footer button#btn-goback{
+.footer button#btn-edit{
 	margin-left:10px;
 	color:#364760;
 	background-color:#fff;
