--- a/WebRoot/module/css/contractManage/contractManage.css
+++ b/WebRoot/module/css/contractManage/contractManage.css
@@ -131,6 +131,9 @@
 	text-indent: 12px;
 	background-color:#fff;
 }
+.companyN ul li.noDate{
+ 	color: red;
+}
 .companyN ul li:hover{
 	background-color:#dcdcdc;
 }
@@ -160,7 +163,9 @@
 	list-style-type: none;
 	text-indent: 12px;
 }
-
+.employeeName ul li.noDate{
+ 	color: red;
+}
 .employeeName ul li:hover {
 	background-color: #dcdcdc;
 }
