--- a/WebRoot/module/css/sampleDesktop/sampleDesktop.css
+++ b/WebRoot/module/css/sampleDesktop/sampleDesktop.css
@@ -3,12 +3,16 @@
 	width: 100%;
 	float: left;
 }
+.bs-checkbox{
+	vertical-align: middle;
+}
 
 .tableArea {
 	width: 900px;
 }
 
 .row {
+	
 	margin-bottom: 10px;
 	margin-left: 0px;
 }
@@ -137,11 +141,11 @@
 	color:#333;
 }
 .leftArea .row span:FIRST-CHILD {
-	font-size: 18;
+	font-size: 14;
 }
 
 .RightArea .row .col-xs-8 span:FIRST-CHILD {
-	font-size: 18;
+	font-size: 14;
 }
 .fixed-table-body #table .bs-checkbox {
 vertical-align: middle;
@@ -152,7 +156,7 @@ vertical-align: middle;
 }
 
 .leftArea .row span:FIRST-CHILD {
-	font-size: 18;
+	font-size: 14;
 }
 .tidingHead ul li:FIRST-CHILD {
 	margin-left:-33px;
