--- a/WebRoot/module/css/equipmentManage/equipmentRepairManage.css
+++ b/WebRoot/module/css/equipmentManage/equipmentRepairManage.css
@@ -139,7 +139,9 @@
 	list-style-type: none;
 	text-indent: 12px;
 }
-
+.equipmentName ul li.noDate{
+ 	color: red;
+}
 .equipmentName ul li:hover {
 	background-color: #dcdcdc;
 }
@@ -169,7 +171,9 @@
 	list-style-type: none;
 	text-indent: 12px;
 }
-
+.employeeN ul li.noDate{
+ 	color: red;
+}
 .employeeN ul li:hover {
 	background-color: #dcdcdc;
 }
