--- a/WebRoot/module/css/equipmentManage/equipmentScrapManage.css
+++ b/WebRoot/module/css/equipmentManage/equipmentScrapManage.css
@@ -133,7 +133,9 @@
 	list-style-type: none;
 	text-indent: 12px;
 }
-
+.equipmentName ul li.noDate{
+ 	color: red;
+}
 .equipmentName ul li:hover {
 	background-color: #dcdcdc;
 }
@@ -163,7 +165,9 @@
 	list-style-type: none;
 	text-indent: 12px;
 }
-
+.employeeN ul li.noDate{
+ 	color: red;
+}
 .employeeN ul li:hover {
 	background-color: #dcdcdc;
 }
