--- a/WebRoot/module/css/equipmentManage/equipmentVerifyManage.css
+++ b/WebRoot/module/css/equipmentManage/equipmentVerifyManage.css
@@ -139,7 +139,9 @@
 	list-style-type: none;
 	text-indent: 12px;
 }
-
+.equipmentName ul li.noDate{
+ 	color: red;
+}
 .equipmentName ul li:hover {
 	background-color: #dcdcdc;
 }
@@ -168,7 +170,9 @@
 	list-style-type: none;
 	text-indent: 12px;
 }
-
+.testProjectName ul li.noDate{
+ 	color: red;
+}
 .testProjectName ul li:hover {
 	background-color: #dcdcdc;
 }
@@ -197,7 +201,9 @@
 	list-style-type: none;
 	text-indent: 12px;
 }
-
+.employeeN ul li.noDate{
+ 	color: red;
+}
 .employeeN ul li:hover {
 	background-color: #dcdcdc;
 }
