--- a/WebRoot/module/css/index/index.css
+++ b/WebRoot/module/css/index/index.css
@@ -162,7 +162,7 @@ vertical-align: middle;
 	color: #fff;
 	border: 1px solid #253347;
 	padding:10px;
-	padding-left: 0;
+	padding-left: 10px;
 
 }
 
