--- a/WebRoot/module/css/employeeManage/employeeManage.css
+++ b/WebRoot/module/css/employeeManage/employeeManage.css
@@ -60,6 +60,7 @@
 	margin-right: 10px;
 	font-size: 12px;
 	color: #666;
+	display:inline;
 }
 
 .modal-content {
@@ -123,10 +124,16 @@
 	padding: 0;
 }
 
-.col-md-3{
+.col-xs-3{
 	margin-bottom:10px;
 }
 
 .btn3:hover{
 	background:#ffad33;
+}
+
+.container{
+	width:100%;
+	min-width:1200px;
+	padding:0;
 }
