--- a/WebRoot/module/css/sampleDesktop/sampleDesktop.css
+++ b/WebRoot/module/css/sampleDesktop/sampleDesktop.css
@@ -178,3 +178,17 @@ vertical-align: middle;
 .tidingHead ul li.selected {
 	 background: #0a8fe7;
 }
+img.nomal{
+	width:100%;
+	
+}
+.achieve{
+	
+}
+.fail{
+	opacity: 0.4;
+	filter: grayscale(0.9);
+	-webkit-filter: grayscale(0.9);
+	-o-filter:grayscale(0.9);
+	-moz-filter:grayscale(0.9);
+}
