--- a/WebRoot/module/css/inspectionStaffDesktop/inspectionStaffDesktop.css
+++ b/WebRoot/module/css/inspectionStaffDesktop/inspectionStaffDesktop.css
@@ -1,4 +1,10 @@
 @CHARSET "UTF-8";
+
+#container {	
+	width: 100%;	
+	float: left;
+}
+
 .top{
 	margin-top: 20px;
 }
@@ -17,7 +23,7 @@
 }
 
 .top textarea{
-	width: 520px;
+	width: 620px;
 	height: 120px;
 	padding: 0;
 	margin-top: 20px;
@@ -31,14 +37,14 @@
 
 
 #left{
-	width: 626px;
+	width: 57%;
+	display: inline-block;
 	margin-left: 15px;
 	float: left;
 	padding: 0;
 }
 
 .head{
-	width:626px;
 	height: 40px;
 	border:1px solid #ccc;
 	margin-top: 20px;
@@ -75,6 +81,7 @@
 	border:2px solid;
 	margin-bottom: 10px;
 	margin-top: 20px;
+	margin-left:15px;
 	padding: 0；
 
 }
@@ -123,13 +130,12 @@
 
 
 #right {
-	width: 380px;
-	margin-left:30px;
-	float: left;
+	width: 40%;
+	display: inline-block;
+	float:right;
 }
 
 .rightHead{
-	width:380px;
 	height:40px;
 	border:1px solid #ccc;
 }
@@ -152,7 +158,7 @@
 }
 
 .messageTable{
-	width:380px;
+	width:100%;
 }
 
 .table-hover>tbody>tr:hover>td,.table-hover>tbody>tr:hover>th {
